tests/symbol_table/snapshots/r#mod__symbol_table__alpha034__public_definitions-2.snap
---
source: tests/symbol_table/alpha034.rs
expression: symbol_table.symbols.get(&11)
---
Some(
    SymbolInfo {
        name: "foo",
        symbol_type: Function,
        data_type: Null,
        arguments: Some(
            [],
        ),
        is_public: true,
        is_definition: true,
        undefined: false,
    },
)
