tests/symbol_table/snapshots/r#mod__symbol_table__alpha034__std_import-2.snap
---
source: tests/symbol_table/alpha034.rs
expression: "input_defs.get(&usize::MAX)"
---
Some(
    SymbolLocation {
        file: FileId(
            1,
        ),
        start: 13,
        end: 18,
        is_public: false,
    },
)
